# sx1302_hal

./: .gitignore  .project  Dockerfile  LICENSE.TXT  Makefile  Makefile.am  VERSION  build.sh  compile.sh  configure.ac  libloragw.pc.in  readme.md  target.cfg
.github/: CODEOWNERS
.github/workflows/: compile-docker.yml
libloragw/: Makefile  TODO.txt  library.cfg  readme.md
libloragw/inc/: config-full.h.in  config.h.in  loragw_ad5338r.h  loragw_agc_params.h  loragw_aux.h  loragw_brd.h  loragw_cal.h  loragw_com.h  loragw_debug.h  loragw_gps.h  loragw_hal.h  loragw_i2c.h  loragw_lbt.h  loragw_mcu.h  loragw_reg.h  loragw_sht.h  loragw_spi.h  loragw_stts751.h  loragw_sx1250.h  loragw_sx125x.h  loragw_sx1261.h  loragw_sx1262fe.h  loragw_sx1302.h  loragw_sx1302_rx.h  loragw_sx1302_timestamp.h  loragw_usb.h  pram.h  pram_lbt_scan.h  pram_lbt_scan_sx1250.h  sx1250_com.h  sx1250_defs.h  sx1250_spi.h  sx1250_usb.h  sx125x_com.h  sx125x_spi.h  sx1261_com.h  sx1261_defs.h  sx1261_spi.h  sx1261_usb.h
libloragw/src/: agc_fw_sx1250.var  agc_fw_sx1257.var  agc_sx1250_02_Oct_1.var  agc_sx1250_09_Oct_27.var  agc_sx1250_lbt.var  agc_sx1250_lbt_261119_6.var  agc_sx1250_with_mailbox.var  agc_sx125x_02_Oct_1.var  agc_sx125x_lbt.var  arb_fw.var  arbiter_ludo.var  cal_fw.var  loragw_ad5338r.c  loragw_aux.c  loragw_cal.c  loragw_com.c  loragw_debug.c  loragw_gps.c  loragw_hal.c  loragw_i2c.c  loragw_lbt.c  loragw_mcu.c  loragw_reg.c  loragw_sht.c  loragw_spi.c  loragw_spi.native.c  loragw_stts751.c  loragw_sx1250.c  loragw_sx125x.c  loragw_sx1261.c  loragw_sx1262fe.c  loragw_sx1302.c  loragw_sx1302_rx.c  loragw_sx1302_timestamp.c  loragw_usb.c  sx1250_com.c  sx1250_spi.c  sx1250_usb.c  sx125x_com.c  sx125x_spi.c  (+38 more)
libloragw/tst/: channels_conf.json  test_loragw_agc_fw.c  test_loragw_cal.c  test_loragw_cal_sx125x.c  test_loragw_capture_ram.c  test_loragw_com.c  test_loragw_com_sx1250.c  test_loragw_com_sx1261.c  test_loragw_counter.c  test_loragw_gps.c  test_loragw_hal_rx.c  test_loragw_hal_tx.c  test_loragw_i2c.c  test_loragw_reg.c  test_loragw_spi.c  test_loragw_spi_sx1250.c  test_loragw_sx1250_rx.c  test_loragw_sx1250_tx.c  test_loragw_sx125x_rx.c  test_loragw_sx125x_tx.c  test_loragw_sx1261_rssi.c  test_loragw_sx1262fe_rx.c  test_loragw_sx1262fe_tx.c  test_loragw_toa.c
libtools/: Makefile
libtools/inc/: base64.h
libtools/inc/cursor/: cursor.h  packing.h
libtools/src/: base64.c  cursor.c  packing.c
packet_forwarder/: Makefile  PROTOCOL.md  global_conf.json  global_conf.json.sx1250  global_conf.json.sx1250.AS923  global_conf.json.sx1250.AS923.USB  global_conf.json.sx1250.AU915  global_conf.json.sx1250.CN470  global_conf.json.sx1250.CN490  global_conf.json.sx1250.CN490.USB  global_conf.json.sx1250.EU868  global_conf.json.sx1250.EU868.USB  global_conf.json.sx1250.IN865  global_conf.json.sx1250.KR920  global_conf.json.sx1250.RU864  global_conf.json.sx1250.US915  global_conf.json.sx1250.US915.USB  global_conf.json.sx1250.radioA  global_conf.json.sx1255.CN490.full-duplex  global_conf.json.sx1257  global_conf.json.sx1257.EU868  global_conf.json.sx1257.US915.full-duplex.cavity-duplexer  global_conf.json.sx1257.US915.full-duplex.ceramic-duplexer  global_conf.json.sx1257.radioB  global_conf.json.us915.full_duplex  readme.md
packet_forwarder/inc/: base64.h  jitqueue.h  trace.h
packet_forwarder/src/: jitqueue.c  lora_pkt_fwd.c  timersync.c
platform/openwrt/package/lorawan-gateway/: Makefile
script/: start.sh
test/: 5_1_PKT_FWD_ROBUST_BOOT.exp
tools/: node-red-registers.json  payload_crc.c  reset_lgw.sh  reset_lgw_fpga.sh  reset_lgw_microcell.sh
tools/payload_tools/: Makefile  payload_crc.c  payload_diff.c  payload_gen.c
tools/shotguns/: main_sx1261_minimouse.cpp  main_sx1272_mbed.cpp
tools/systemd/: lora_pkt_fwd.conf  lora_pkt_fwd.service  readme.md
util_boot/: Makefile  readme.md
util_boot/src/: boot.c
util_check_alive/: Makefile  readme.md
util_check_alive/src/: check_alive.c
util_chip_id/: Makefile  readme.md
util_chip_id/src/: chip_id.c
util_net_downlink/: Makefile  readme.md
util_net_downlink/inc/: base64.h
util_net_downlink/src/: base64.c  net_downlink.c
util_spectral_scan/: Makefile  plot_rssi_histogram.py  readme.md
util_spectral_scan/src/: spectral_scan.c
util_test_usb/: Makefile  readme.md
util_test_usb/src/: test_usb.c
